Cambio de la forma de descarga ed libros en el Buscador.java, uso de la libreria java.net.URL en vez de URI (No usar URI, da muchos fallos a la hora de abror enlaces)
Pd: se cambio el servidor de almacenamiento a github